--- a/src/components/tabs/style.scss
+++ b/src/components/tabs/style.scss
@@ -3,73 +3,72 @@
 
 @include b('tabs') {
   $root: &;
+  $tabRoot: #{ b('tab-item') };
 
   @include e('list') {
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
-  }
 
-  @include e('item') {
-    $tabRoot: &;
-
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    padding: $st-tabs-item-padding-vertical $st-tabs-item-padding-horizontal;
-    font-size: $st-tabs-item-font-size;
-    color: $st-tabs-item-text-color;
-    text-align: center;
-    white-space: nowrap;
-    cursor: pointer;
-    border-bottom: $st-tabs-item-border-width $st-tabs-item-border-style $st-tabs-item-border-color;
-
-    @include m('selected') {
-      color: $st-tabs-item-selected-text-color;
-      border-bottom-color: $st-tabs-item-selected-border-color;
-      border-bottom-width: $st-tabs-item-selected-border-width;
-    }
-
-    &:not(#{ m('selected') }):hover {
-      color: $st-tabs-item-hovered-text-color;
-      border-bottom-color: $st-tabs-item-hovered-border-color;
-      border-bottom-width: $st-tabs-item-hovered-border-width;
-    }
-
-    .tab-icon {
-      width: $st-tabs-item-icon-size;
-      height: $st-tabs-item-icon-size;
-      margin-right: $st-tabs-item-icon-margin;
-      color: currentColor;
-    }
-
-    .tab-label {
-      color: currentColor;
-    }
-
-    .tab-close-btn {
-      position: absolute;
-      top: 50%;
-      right: 0;
-      width: $st-tabs-item-close-size;
-      height: $st-tabs-item-close-size;
-      padding: $st-tabs-item-close-padding;
-      margin-top: -($st-tabs-item-border-width / 2);
-      color: $st-tabs-item-close-color;
+    #{ b('tab-item') } {
+      position: relative;
+      display: inline-flex;
+      align-items: center;
+      padding: $st-tabs-item-padding-vertical $st-tabs-item-padding-horizontal;
+      font-size: $st-tabs-item-font-size;
+      color: $st-tabs-item-text-color;
+      text-align: center;
+      white-space: nowrap;
       cursor: pointer;
-      visibility: hidden;
-      opacity: $st-tabs-item-close-opacity;
-      transform: translateY(-50%);
+      border-bottom: $st-tabs-item-border-width $st-tabs-item-border-style $st-tabs-item-border-color;
+
+      @include m('selected') {
+        color: $st-tabs-item-selected-text-color;
+        border-bottom-color: $st-tabs-item-selected-border-color;
+        border-bottom-width: $st-tabs-item-selected-border-width;
+      }
+
+      &:not(#{ m('selected', $tabRoot) }):hover {
+        color: $st-tabs-item-hovered-text-color;
+        border-bottom-color: $st-tabs-item-hovered-border-color;
+        border-bottom-width: $st-tabs-item-hovered-border-width;
+      }
+
+      @include e('icon') {
+        width: $st-tabs-item-icon-size;
+        height: $st-tabs-item-icon-size;
+        margin-right: $st-tabs-item-icon-margin;
+        color: currentColor;
+      }
+
+      @include e('label') {
+        color: currentColor;
+      }
+
+      @include e('close-btn') {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        width: $st-tabs-item-close-size;
+        height: $st-tabs-item-close-size;
+        padding: $st-tabs-item-close-padding;
+        margin-top: -($st-tabs-item-border-width / 2);
+        color: $st-tabs-item-close-color;
+        cursor: pointer;
+        visibility: hidden;
+        opacity: $st-tabs-item-close-opacity;
+        transform: translateY(-50%);
+
+        &:hover {
+          color: $st-tabs-item-close-color-hovered;
+        }
+      }
 
       &:hover {
-        color: $st-tabs-item-close-color-hovered;
-      }
-    }
-
-    &:hover {
-      .tab-close-btn {
-        visibility: visible;
-        opacity: 1;
+        #{ e('close-btn', $tabRoot) } {
+          visibility: visible;
+          opacity: 1;
+        }
       }
     }
   }
